# ovgl

./: CMakeLists.txt  Ovgl.nsi  README.md  ovgl.pc.cmake
docs/: Doxyfile
editor/: CMakeLists.txt  editor.cpp
examples/FPS/: CMakeLists.txt  FPS.cpp
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
examples/Tetrominoes/: CMakeLists.txt  Tetrominoes.cpp
include/: Ovgl.h  OvglAudio.h  OvglCommon.h  OvglContext.h  OvglGraphics.h  OvglInstance.h  OvglMath.h  OvglMedia.h  OvglMesh.h  OvglResource.h  OvglScene.h  OvglSkeleton.h  OvglWindow.h
media/blender/: Harvey.blend
media/meshes/: Block.fbx  Pavilion.fbx  Pedestal.fbx  PlaneTest.fbx  Woman.fbx  chair.fbx  plane.dae  plane.fbx  teapot.FBX  test.dae  test.fbx  test1.fbx  test2.che  test2.fbx  test3.che
media/shaders/: Default.fx  Shadow.fx  Sky.fx
media/textures/: Grass.dds
modules/: FindAssimp.cmake  FindBullet.cmake  FindCG.cmake  FindDX10.cmake  FindDoxygen.cmake  FindFBXSDK.cmake  FindFreeImage.cmake  FindOgg.cmake  FindOpenAL.cmake  FindPhysX.cmake  FindRecast.cmake
ovgl/: CMakeLists.txt  Doxyfile  NxStreamDefault.h  Ovgl.h  OvglAnimation.cpp  OvglAnimation.h  OvglAudio.cpp  OvglAudio.h  OvglGraphics.cpp  OvglGraphics.h  OvglIncludes.h  OvglInstance.cpp  OvglInstance.h  OvglMath.cpp  OvglMath.h  OvglMedia.cpp  OvglMedia.h  OvglMesh.cpp  OvglMesh.h  OvglScene.cpp  OvglScene.h  OvglSkeleton.cpp  OvglSkeleton.h  OvglWindow.cpp  OvglWindow.h
src/: CMakeLists.txt  Ovgl.h  OvglAudio.cpp  OvglContext.cpp  OvglGraphics.cpp  OvglGraphics.h  OvglIncludes.h  OvglInstance.cpp  OvglInstance.h  OvglMath.cpp  OvglMedia.cpp  OvglMedia.h  OvglMesh.cpp  OvglResource.cpp  OvglScene.cpp  OvglScene.h  OvglSkeleton.cpp  OvglSkeleton.h  OvglWindow.cpp  OvglWindow.h
